phpmyadmin/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin-deployment
  labels:
    app: phpmyadmin
    tier: administration
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: phpmyadmin
      tier: administration
  template:
    metadata:
      labels:
        app: phpmyadmin
        tier: administration
    spec:
      containers:
        - name: phpmyadmin
          image: phpmyadmin/phpmyadmin
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
