phpmyadmin/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-service
  labels:
    app: phpmyadmin
    tier: administration
spec:
  selector:
    app: phpmyadmin
    tier: administration
  ports:
    - protocol: TCP
      port: 8181
      targetPort: 80
  type: LoadBalancer
